--- a/SSISExecutionManagerReports/Currently Executing SQL.rdl
+++ b/SSISExecutionManagerReports/Currently Executing SQL.rdl
@@ -13,25 +13,8 @@
     <DataSet Name="CurrentlyExecutingSQL">
       <Query>
         <DataSourceName>SSISExecutionManager</DataSourceName>
-        <CommandText>SELECT r.start_time                                                 [Start Time],
-       session_ID                                                   [SPID],
-       Db_name(database_id)                                         [Database],
-       Substring(t.text, ( r.statement_start_offset / 2 ) + 1, CASE
-                                                                 WHEN statement_end_offset = -1
-                                                                       OR statement_end_offset = 0 THEN ( Datalength(t.Text) - r.statement_start_offset / 2 ) + 1
-                                                                 ELSE ( r.statement_end_offset - r.statement_start_offset ) / 2 + 1
-                                                               END) [Executing SQL],
-       Status,
-       command,
-       wait_type,
-       wait_time,
-       wait_resource,
-       last_wait_type
-FROM   sys.dm_exec_requests r
-       OUTER APPLY sys.Dm_exec_sql_text(sql_handle) t
-WHERE  session_id != @@SPID -- don't show this query
-       AND session_id &gt; 50 -- don't show system queries
-ORDER  BY r.start_time</CommandText>
+        <CommandType>StoredProcedure</CommandType>
+        <CommandText>rpt.GetCurrentlyExecutingSQL</CommandText>
         <rd:UseGenericDesigner>true</rd:UseGenericDesigner>
       </Query>
       <Fields>
